datepicker css overflow fix; returned modalMagic to old form since its simpler now

--- a/public/css/components/abgabetool/abgabe.css
+++ b/public/css/components/abgabetool/abgabe.css
@@ -157,3 +157,7 @@
 	border-radius: 0.5rem;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
 }
+
+.bordered-modal  .modal-body {
+	overflow-y: visible;
+}
